JumpScript/tests/baselines/reference/es6ImportNamedImportNoNamedExports.errors.txt
tests/cases/compiler/es6ImportNamedImportNoNamedExports_1.jump(1,10): error TS2305: Module '"tests/cases/compiler/es6ImportNamedImportNoNamedExports_0"' has no exported member 'a'.
tests/cases/compiler/es6ImportNamedImportNoNamedExports_1.jump(2,10): error TS2305: Module '"tests/cases/compiler/es6ImportNamedImportNoNamedExports_0"' has no exported member 'a'.


==== tests/cases/compiler/es6ImportNamedImportNoNamedExports_0.jump (0 errors) ====
    var a = 10;
    export = a;
    
==== tests/cases/compiler/es6ImportNamedImportNoNamedExports_1.jump (2 errors) ====
    import { a } from "./es6ImportNamedImportNoNamedExports_0";
             ~
!!! error TS2305: Module '"tests/cases/compiler/es6ImportNamedImportNoNamedExports_0"' has no exported member 'a'.
    import { a as x } from "./es6ImportNamedImportNoNamedExports_0";
             ~
!!! error TS2305: Module '"tests/cases/compiler/es6ImportNamedImportNoNamedExports_0"' has no exported member 'a'.